Some improvements (commit from 1.16.5)